# Cpp_learning_note

./: CMake_note.md  ChaSen.md  README.md  main.cpp  main_function.md  testcpp.cpp
Demo_1/: CMakeLists.txt
Demo_2/: CMakeLists.txt  MathFunctions.cpp  main.cpp
Demo_3/: CMakeLists.txt  main.cpp
Demo_3/math/: CMakeList.txt
Demo_4/: CMakeLists.txt  main.cpp
